log
Thu 07 Sep 2023 05:50:05 PM UTC: 
 hashmap.c | 13 ++++++++++---
 1 file changed, 10 insertions(+), 3 deletions(-)
 tests:  1|5
total_score: 10/70
8a95366
Thu 07 Sep 2023 06:05:46 PM UTC: 
 hashmap.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:44:8: error: unused variable ‘posicion’ [-Werror=unused-variable]
   44 |   long posicion = hash(key, map->capacity);
      |        ^~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
133414a
Thu 07 Sep 2023 06:19:59 PM UTC: 
 hashmap.c | 10 +++++++++-
 1 file changed, 9 insertions(+), 1 deletion(-)
 tests:  0|0
1842fb9
Thu 07 Sep 2023 06:24:10 PM UTC: 
 hashmap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|0
42952df
Thu 07 Sep 2023 06:25:27 PM UTC: 
 hashmap.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
 tests:  0|0
8905c46
Thu 07 Sep 2023 07:06:28 PM UTC: 
 hashmap.c | 15 +++++++++++++++
 1 file changed, 15 insertions(+)
 tests:  0|0
72e7bb5
Thu 07 Sep 2023 07:07:47 PM UTC: 
 hashmap.c | 7 +++----
 1 file changed, 3 insertions(+), 4 deletions(-)
 tests:  0|0
331648b
Thu 07 Sep 2023 07:08:49 PM UTC: 
 hashmap.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  0|0
805b352
Thu 07 Sep 2023 07:11:39 PM UTC: 
 hashmap.c | 12 +++++++-----
 1 file changed, 7 insertions(+), 5 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:54:10: error: unused variable ‘posicion_colision’ [-Werror=unused-variable]
   54 |     long posicion_colision = posicion;
      |          ^~~~~~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
ed8cf02
Thu 07 Sep 2023 07:25:04 PM UTC: 
 hashmap.c | 30 +++++++++---------------------
 1 file changed, 9 insertions(+), 21 deletions(-)
 tests:  5|4
total_score: 30/70
709ccde
Thu 07 Sep 2023 07:40:40 PM UTC: 
 hashmap.c | 14 +++++++++++++-
 1 file changed, 13 insertions(+), 1 deletion(-)
 tests:  0|0
a9a1fdc
Thu 07 Sep 2023 07:42:15 PM UTC: 
 hashmap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|0
15b5c8c
Thu 07 Sep 2023 07:43:33 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
9b6526c
Thu 07 Sep 2023 07:43:58 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|4
total_score: 30/70
24eed3f
Thu 07 Sep 2023 07:47:27 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|4
total_score: 30/70
6003b04
Thu 07 Sep 2023 07:48:56 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|4
total_score: 30/70
b7ec709
Thu 07 Sep 2023 07:51:21 PM UTC: 
 hashmap.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
 tests:  5|4
total_score: 30/70
6643f62
Thu 07 Sep 2023 07:52:50 PM UTC: 
 hashmap.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  6|4
total_score: 30/70
727347f
Thu 07 Sep 2023 07:53:55 PM UTC: 
 hashmap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  8|3
total_score: 40/70
0c352f4
Thu 07 Sep 2023 08:00:20 PM UTC: 
 hashmap.c | 19 ++++++++++++++++++-
 1 file changed, 18 insertions(+), 1 deletion(-)
 tests:  11|2
total_score: 50/70
c17bf0f
Thu 07 Sep 2023 10:01:12 PM UTC: 
 hashmap.c | 15 ++++++++++++---
 1 file changed, 12 insertions(+), 3 deletions(-)
 tests:  12|2
total_score: 50/70
0ddb6d1
Thu 07 Sep 2023 10:01:50 PM UTC: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  13|2
total_score: 50/70
67f2cc8
Thu 07 Sep 2023 10:05:33 PM UTC: 
 hashmap.c | 11 +++++++++++
 1 file changed, 11 insertions(+)
 tests:  15|2
total_score: 50/70
e316812
Thu 07 Sep 2023 10:16:40 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘nextMap’:
hashmap.c:142:34: error: comparison between pointer and integer [-Werror]
  142 |   if(map == NULL || map->current == NULL) return NULL;
      |                                  ^~
cc1: all warnings being treated as errors
Compilation failed
249817c
